src/z80asm/z80asm2/t/20-preproc/expected/dma_wr2_01.txt
% z88dk-z80asm -v -dump-after-directives t/20-preproc//input/dma_wr2_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/20-preproc/input/dma_wr2_01.asm...
t/20-preproc/input/dma_wr2_01.asm:1:1: error: DMA_WR2 not supported on z80
    dma.wr2 0x40
    ^
